# MigBotMemory

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
MigBotMemory/: CLAUDE.md
MigBotMemory/examples/: sample_patterns.json
MigBotMemory/hooks/: hooks.json  on_stop.sh
MigBotMemory/src/mbm/: inject.py
MigBotMemory/tests/: test_lifecycle.py
examples/: sample_tasks.json
hooks/: hooks.json  on_session_end.sh  on_session_start.sh  on_skill_use.sh  on_stop.sh
src/mbm/: __init__.py  cli.py  config.py  inject.py  models.py  store.py
tests/: test_inject.py  test_lifecycle.py  test_store.py
