[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migbot-memory"
version = "0.1.0"
description = "Universal compilation error pattern cache with progressive disclosure for code migration tools"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.scripts]
mbm = "mbm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mbm"]

[tool.pytest.ini_options]
testpaths = ["tests"]